# ps2-controller

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: firmware.yml  host-tests.yml
docs/: bringup.md  wiring.md
docs/superpowers/plans/: 2026-07-07-0x79-pressure-mode-decision.md  2026-07-07-ps2-dualshock-bluetooth-adapter.md  2026-07-09-dual-controller-ports.md  2026-07-09-led-matrix-status.md  2026-07-09-neopixel-status-led.md
docs/superpowers/specs/: 2026-07-07-ps2-dualshock-bluetooth-adapter-design.md  2026-07-08-neopixel-status-led-design.md  2026-07-09-dual-controller-ports-design.md  2026-07-09-led-matrix-status-design.md
src/: main.c
src/input/: bluepad32_platform.c  bluepad32_platform.h  gamepad_map.c  gamepad_map.h  input_state.h  port_router.c  port_router.h  shared_input.c  shared_input.h
src/matrix/: matrix_driver.c  matrix_driver.h  matrix_glyphs.h  matrix_render.c  matrix_render.h
src/ps2_device/: ds2_ids.h  ds2_protocol.c  ds2_protocol.h  ps2_device.c  ps2_device.h  ps2_transport.c  ps2_transport.h  psxSPI.pio
src/status_led/: status_color.c  status_color.h  status_indicator.c  status_indicator.h  status_state.h
test/: CMakeLists.txt  test_ds2_protocol.c  test_gamepad_map.c  test_matrix_render.c  test_port_router.c  test_smoke.c  test_status_color.c
